@@ -21,7 +21,7 @@
 	<{/if}>
 	<{$smarty.const._MD_IMGLOSSARY_OTHER}> |
 	<{if $totalother > 0}></a><{/if}>
-	<a href="<{$xoops_url}>/modules/<{$lang_moduledirname}>/letter.php" title="<{$publishedwords}><{$letterlinks.title}>"><{$smarty.const._MD_IMGLOSSARY_ALL}></a>
+	<a href="<{$xoops_url}>/modules/<{$lang_moduledirname}>/letter.php?init=<{$smarty.const._MD_IMGLOSSARY_ALL}>" title="<{$publishedwords}><{$letterlinks.title}>"><{$smarty.const._MD_IMGLOSSARY_ALL}></a>
 </div>
 </fieldset>
 </div>
